--- a/src/app/historial/historial.component.html
+++ b/src/app/historial/historial.component.html
@@ -1,22 +1,21 @@
-<ion-content class="background">
+<ion-content class="background" [class.backgroundclaro]="modo" [class.backgroundoscuro]="!modo">
   <div class="layout">
-    <div class="menu-lateral">
-      <app-menuizquierdaconfig></app-menuizquierdaconfig>
-    </div>
+    <app-menuizquierdaconfig></app-menuizquierdaconfig>
 
     <div class="formulario">
       <div class="branding">
         <h1>Historial</h1>
-        <p>Búsquedas Recientes</p>
+        <p [class.claro]="modo" [class.oscuro]="!modo">Búsquedas Recientes</p>
       </div>
 
       <div class="scroll-container">
-        <ion-card class="product-card" *ngFor="let busqueda of historial">
+        <ion-card class="product-card" *ngFor="let busqueda of historial" [class.cardclaro]="modo" [class.cardoscuro]="!modo"
+        >
           <div class="card-content">
             <ion-checkbox slot="start"></ion-checkbox>
             <div class="text-content">
-              <ion-card-title>{{ busqueda.concepto }}</ion-card-title>
-              <div class="fecha">{{ busqueda.fecha }}</div>
+              <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ busqueda.concepto }}</ion-card-title>
+              <div class="fecha" [class.claro]="modo" [class.oscuro]="!modo">{{ busqueda.fecha }}</div>
             </div>
           </div>
         </ion-card>
