--- a/src/app/historial/historial.component.scss
+++ b/src/app/historial/historial.component.scss
@@ -1,10 +1,17 @@
 .background {
   --background: transparent;
-  background: linear-gradient(to bottom, #ffffff, #ffd38e);
   background-size: cover;
   background-position: center;
   height: 100%;
   padding: 24px 16px;
+}
+
+.backgroundclaro {
+  background: linear-gradient(to bottom, #ffffff, #ffd38e);
+}
+
+.backgroundoscuro {
+  background: linear-gradient(to bottom, #1e1e1e, #2c2c2c);
 }
 
 .layout {
@@ -12,14 +19,6 @@
   flex-direction: row;
   height: 100%;
   gap: 24px;
-}
-
-.menu-lateral {
-  width: 420px;
-  background-color: #fefefe;
-  border-right: 2px solid #ccc;
-  padding: 16px;
-  border-radius: 12px;
 }
 
 .formulario {
@@ -44,14 +43,20 @@
 
   p {
     font-size: 0.95rem;
-    color: #4d4d4d;
   }
+}
+
+.claro {
+  color: #333;
+}
+
+.oscuro {
+  color: #ddd;
 }
 
 .product-card {
   flex-shrink: 0;
   min-height: 70px;
-  --background: #ffffff;
   width: 100%;
   border-radius: 16px;
   overflow: hidden;
@@ -61,15 +66,30 @@
   display: flex;
   align-items: center;
   margin-bottom: 0;
+}
 
-  ion-card-title {
-    font-size: 1rem;
-    font-weight: bold;
-    color: #e67e22;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+.cardclaro {
+  --background: #ffffff;
+  background: #ffffff;
+}
+
+.cardoscuro {
+  --background: #4e4e4e;
+  background: #4e4e4e;
+  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.08);
+}
+
+.product-card ion-card-title {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #e67e22;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cardoscuro ion-card-title {
+  color: #ffb366;
 }
 
 .card-content {
@@ -88,7 +108,6 @@
 
 .fecha {
   font-size: 0.85rem;
-  color: #777;
 }
 
 .scroll-container {
@@ -100,7 +119,6 @@
   flex-direction: column;
 }
 
-/* Personaliza el scroll (opcional) */
 .scroll-container::-webkit-scrollbar {
   width: 12px;
 }
@@ -110,7 +128,7 @@
   border-radius: 6px;
 }
 
-.eliminar{
+.eliminar {
   --background: #e67e22;
   --color: white;
   --background-activated: #d35400;
