--- a/src/app/crearproductopopover/crearproductopopover.component.scss
+++ b/src/app/crearproductopopover/crearproductopopover.component.scss
@@ -12,9 +12,17 @@
 
 ion-grid {
   padding: 20px;
-  background: #fff;
+  background-color: var(--background); /* Usar variable de color */
   border-radius: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 500px;
+}
+.gridclaro {
+  --background: #ffffff;
+}
+.gridoscuro {
+  --background: #4e4e4e;
 }
 
 
@@ -23,7 +31,13 @@ ion-grid {
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Igual que el segundo */
-  background-color: #f5f5f5;
+  background-color: var(--background);
+}
+.fotoclaro {
+  --background: #ffffff;
+}
+.fotooscuro {
+  --background: #e6e6e6;
 }
 
 .foto img {
@@ -33,21 +47,20 @@ ion-grid {
 }
 
 ion-item {
-  --background: #ffffff;    /* Igual que el segundo */
+  border-radius: 12px;
+  --background: #e6e6e6;    /* Igual que el segundo */
   --color: #4d4d4d;
   --min-height: 36px;
   margin-bottom: 8px;
 }
 
+
 ion-label {
-  color: #e67e22;
   font-size: 14px;
   font-weight: bold;
 }
 
-ion-input,
-ion-textarea {
-  --color: #4d4d4d;
+ion-input{
   margin-top: 10px;
   height: 32px;
 }
