--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,7 +1,7 @@
 <ion-content class="background" [class.backgroundclaro]="modo" [class.backgroundoscuro]="!modo">
   <div class="top-icons">
     <button>
-      <ion-icon name="notifications-outline" [class.claro]="modo" [class.oscuro]="!modo"></ion-icon>
+      <ion-icon name="notifications-outline" (click)="abrirCrearAlerta()" [class.claro]="modo" [class.oscuro]="!modo"></ion-icon>
     </button>
     <button>
       <ion-icon name="person-circle-outline" [routerLink]="'/modificarperfil'" [class.claro]="modo" [class.oscuro]="!modo"></ion-icon>
