--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -40,7 +40,7 @@
       <ion-card-content>
         <div class="price-row">
           <span class="actual-price">€{{ producto.actualPrice.toFixed(2) }}</span>
-          <span class="old-price">€{{ producto.oldPrice.toFixed(2) }}</span>
+          <span class="old-price">€{{ producto.oldPrice?.toFixed(2) }}</span>
         </div>
         <div class="rating">⭐ {{ producto.rating }}</div>
         <div class="delivery">{{ producto.delivery }}</div>
